--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,8 +25,10 @@ dependencies:
   cupertino_icons: ^0.1.2
   font_awesome_flutter:
   http: ^0.12.0+1
+  html: ^0.13.4+1
   rxdart: ^0.21.0
   flutter_masked_text: ^0.8.0
+  dio: ^2.0.20
   flutter_localizations:
     sdk: flutter
 dev_dependencies:
