--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,12 +23,16 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
+  carousel_slider: ^1.1.0
   font_awesome_flutter:
   http: ^0.12.0+1
   html: ^0.13.4+1
   rxdart: ^0.21.0
   flutter_masked_text: ^0.8.0
   dio: ^2.0.20
+  cached_network_image: ^2.0.0-rc
+  flutter_webview_plugin: ^0.3.10
+  share: ^0.6.0
   flutter_localizations:
     sdk: flutter
 dev_dependencies:
