--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,9 +27,10 @@ dependencies:
   font_awesome_flutter:
   http: ^0.12.0+1
   html: ^0.13.4+1
-  rxdart: ^0.21.0
+  rxdart: ^0.22.3
   flutter_masked_text: ^0.8.0
-  dio: ^2.0.20
+  # dio: ^2.0.20
+  dio: ^3.0.7
   cached_network_image: ^2.0.0-rc
   flutter_webview_plugin: ^0.3.10
   share: ^0.6.0
@@ -41,10 +42,16 @@ dependencies:
   # https://github.com/flutterchina/flukit.
   flukit: ^1.0.2
   # https://pub.dev/packages/json_serializable
-  json_serializable: ^3.2.5
+  # json_serializable: ^3.2.5
+  json_annotation: 3.0.1
+  shared_preferences: 0.5.6
+  graphql: 2.1.0
+  connectivity: 0.4.6+1
   flutter_localizations:
     sdk: flutter
 dev_dependencies:
+  build_runner: ^1.7.2
+  json_serializable: 3.2.0
   random_pk:
   flutter_test:
     sdk: flutter
