--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,8 @@ dependencies:
   json_annotation: 3.0.1
   shared_preferences: 0.5.6
   graphql: 2.1.0
+  fluttertoast: ^3.1.3
+  flutter_redux: ^0.6.0
   connectivity: 0.4.6+1
   flutter_localizations:
     sdk: flutter
