--- a/.gitignore
+++ b/.gitignore
@@ -76,3 +76,7 @@
 !/packages/flutter_tools/test/data/dart_dependencies_test/**/.packages
 /.flutter-plugins-dependencies
 /.vscode
+
+
+# add tdw
+ignoreConfig.dart
