--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,20 @@ dependencies:
   fluttertoast: ^3.1.3
   flutter_redux: ^0.6.0
   connectivity: 0.4.6+1
+  # flutter deer
+  # Toast插件 https://github.com/OpenFlutter/flutter_oktoast
+  oktoast: ^2.3.0
+   # 状态管理 https://github.com/rrousselGit/provider
+  provider: ^4.0.1
+  # 启动URL的插件 https://github.com/flutter/plugins/tree/master/packages/url_launcher
+  url_launcher: 5.4.1
+  # 处理键盘事件 https://github.com/diegoveloper/flutter_keyboard_actions
+  keyboard_actions: ^2.1.2
+  # 扫码 https://github.com/apptreesoftware/flutter_barcode_reader
+  barcode_scan:
+    git:
+      url: https://github.com/simplezhli/flutter_barcode_reader.git
+  #-----------------
   flutter_localizations:
     sdk: flutter
 dev_dependencies:
@@ -76,6 +90,8 @@ flutter:
   #  - images/a_dot_ham.jpeg
   assets:
       - assets/images/
+      - assets/images/home/
+      - assets/images/order/
       - locale/i18n_en.json
       - locale/i18n_hi.json
   # An image asset can refer to one or more resolution-specific "variants", see
